[fix] docs, gitignore add
