# controllers/product/AproveActivation.go
@@ -12,11 +12,11 @@ import (
 
 // AproveActivation godoc
 // @Tags Product
-// @Summary Update product - accpetd
-// @Description
+// @Summary Update product aprove
+// @Description aprove activation
 // @Accept json
 // @Produce json
-// @Security ApiKeyAuth
+// @Param Authorization header string true "Bearer token"
 // @Param Request body requests.ResProductResponse true "Request body"
 // @Success 200 {object} models.DefaultSuccess
 // @Failure 400 {object} models.DefaultError
