# docs/swagger.json
@@ -7,11 +7,7 @@
     "paths": {
         "/admin/aprove": {
             "put": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
+                "description": "aprove activation",
                 "consumes": [
                     "application/json"
                 ],
@@ -21,8 +17,15 @@
                 "tags": [
                     "Product"
                 ],
-                "summary": "Update product - accpetd",
+                "summary": "Update product aprove",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "Request body",
                         "name": "Request",
@@ -66,6 +69,13 @@
                 "summary": "Index products",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "Select product by status 0- pending 1-accepted 2-rejected",
                         "name": "status",
@@ -98,6 +108,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
+                "description": "reject activation",
                 "consumes": [
                     "application/json"
                 ],
@@ -107,8 +118,15 @@
                 "tags": [
                     "Product"
                 ],
-                "summary": "Update product - rejected",
+                "summary": "Update product rejected",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "Request body",
                         "name": "Request",
@@ -152,6 +170,13 @@
                 "summary": "Index products",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "Select product by status 0- pending 1-accepted 2-rejected",
                         "name": "status",
@@ -184,7 +209,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "create a new request",
+                "description": "issue product activation",
                 "consumes": [
                     "application/json"
                 ],
@@ -194,8 +219,15 @@
                 "tags": [
                     "Product"
                 ],
-                "summary": "Create a product issue",
+                "summary": "Create issue product activation",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "Request body",
                         "name": "Request",
@@ -234,7 +266,7 @@
                 "tags": [
                     "User"
                 ],
-                "summary": "Create a superuser",
+                "summary": "Create a exteraluser",
                 "parameters": [
                     {
                         "description": "Request body",
